--- a/02-bases/src/app/heroes/list/list.component.html
+++ b/02-bases/src/app/heroes/list/list.component.html
@@ -1,9 +1,16 @@
 <h3>Listado de Héroes</h3>
 
-<h3>Héroe borrado <small class="text-danger"> XXX</small></h3>
-<h3>No ha borrado nada.</h3>
+<div *ngIf="deletedHero; else nothingWasDeleted">
+    <h3>Héroe borrado <small class="text-danger"> {{ deletedHero }} </small></h3>
+</div>
+<ng-template #nothingWasDeleted>
+    <h3>No ha borrado nada</h3>
+</ng-template>
 
-<button class="btn btn-outline-danger">
+<button
+    *ngIf="heroNames.length > 0"
+    (click)="removeLastHero()"
+    class="btn btn-outline-danger">
     Borrar último héroe
 </button>
 
