--- a/02-bases/src/app/dbz/components/list/list.component.html
+++ b/02-bases/src/app/dbz/components/list/list.component.html
@@ -1,6 +1,11 @@
 <h4>Listado</h4>
 <ul class="list-group">
-    <li class="list-group-item">Goku - 11,000</li>
-    <li class="list-group-item">Freeza - 10,500</li>
-    <li class="list-group-item">Vegeta - 10,000</li>
+    <li *ngFor="let character of characterList"
+        class="list-group-item">
+        <span> {{ character.name }} - </span>
+        <strong> Power: </strong>
+        <span> {{ character.power }} </span>
+    </li>
+    <!-- <li class="list-group-item">Freeza - 10,500</li>
+    <li class="list-group-item">Vegeta - 10,000</li> -->
 </ul>
