--- a/02-bases/src/app/dbz/components/add-character/add-character.component.html
+++ b/02-bases/src/app/dbz/components/add-character/add-character.component.html
@@ -2,11 +2,24 @@
 
 <form class="row">
 
-    <input type="text" class="form-control mb-2" placeholder="Nombre">
+    <input 
+    type="text" 
+    [(ngModel)]="character.name"    
+    name="name"
+    class="form-control mb-2" 
+    placeholder="Nombre">
 
-    <input type="number" class="form-control mb-2" placeholder="Poder">
+    <input type="number" 
+    [(ngModel)]="character.power" 
+    name="power"
+    class="form-control mb-2"
+    placeholder="Poder" >
 
-    <button type="submit" class="btn btn-primary">
+    <button type="submit" class="btn btn-primary" (click)="showCharacter()">
         Agregar
     </button>
+
+<!-- esto < | > se llama pipe y hace que veamos en el html en formato json
+ ya que por defecto angular lo muestra .toString()  -->
+    <pre> {{ character | json }} </pre>
 </form>
