--- a/02-bases/src/app/dbz/components/list/list.component.html
+++ b/02-bases/src/app/dbz/components/list/list.component.html
@@ -1,11 +1,30 @@
 <h4>Listado</h4>
 <ul class="list-group">
-    <li *ngFor="let character of characterList"
-        class="list-group-item">
+    <li *ngFor="let character of characterList; 
+    let i = index;
+    let isFirst = first;
+    let isLast = last;
+    let isEven = even; 
+    let isOdd = odd;
+    "
+        class="list-group-item"
+        [ngClass]="{ 
+            'list-group-item-dark': isLast,
+            'list-group-item-primary': isFirst
+            
+        }">
+
+        <span class="text-primary"> {{ i + 1 }}. </span>
+
         <span> {{ character.name }} - </span>
+
         <strong> Power: </strong>
+
         <span> {{ character.power }} </span>
+
+     <!--    <span>Es Par: {{isEven}} </span>
+
+        <span>Es Impar: {{isOdd}} </span> -->
     </li>
-    <!-- <li class="list-group-item">Freeza - 10,500</li>
-    <li class="list-group-item">Vegeta - 10,000</li> -->
+
 </ul>
