flujo completo entre componentes

--- a/02-bases/src/app/dbz/components/add-character/add-character.component.html
+++ b/02-bases/src/app/dbz/components/add-character/add-character.component.html
@@ -21,5 +21,5 @@
 
 <!-- esto < | > se llama pipe y hace que veamos en el html en formato json
  ya que por defecto angular lo muestra .toString()  -->
-    <pre> {{ character | json }} </pre>
+   <!--  <pre> {{ character | json }} </pre> -->
 </form>
