--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -5,7 +5,8 @@
 <div class="row">
     <div class="col">
 
-        <dbz-list [characterList]="characters" ></dbz-list>
+        <dbz-list (onDelete)="onDeleteCharacter($event)"  
+        [characterList]="characters" ></dbz-list>
 
     </div>
 
